fix: z-index on navbar

--- a/src/components/Navbar/NavBar.scss
+++ b/src/components/Navbar/NavBar.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 
   @media screen and (max-width: 600px) {
     justify-content: space-between
